# inyoka

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .mailmap  .ruff.toml  AUTHORS  CNAME  CONTRIBUTING.md  ChangeLog.rst  Gruntfile.js  Jenkinsfile  LICENSE  Procfile  README.md  README.rst  SECURITY.md  TESTING  TODO  babel.cfg  convert_database.py  database.db-journal  easy_uninstall.py  example_development_settings.py  fabfile.py  gunicorn_conf.py  init.sh  make_bdd_testdata.py  make_testdata.py  manage.py  migrate_iwls.py  package-lock.json  package.json  pyproject.toml  reset.sh  setup.cfg  setup.py  starttests.py  v0.0.27-88-gd4bf779-001.patch  vim
.github/workflows/: test.yml
.jenkins/: Jenkinsfile  deploy.groovy  statics-build.groovy
.tx/: config
docs/: Makefile  clean_database.sql  conf.py  getting_started.rst  index.rst  installation.rst  inyoka.rst  make.bat  mysql-knowhow.rst  packagemanagement.rst  release_procedure.rst  security.rst  settings.rst
docs/releases/: 0.0.rst  index.rst
extra/: audio-captcha.tar.bz2  autoreload  babel.cfg  babeljs.cfg  bootstrap-extra.py  build_cache_key_map.py  count_loc.py  gunicorn.initd  install.sh  jslint-check.js  jslint.js  make-bootstrap.py  reindent.py  requirements.txt  translation_update.py  virtualenv-setup.sh
extra/asap.js/: index.js
extra/requirements/: README.md  README.rst  base.html  base.txt  build-requirements.yml  development.in  development.txt  linux-py3.10-development.txt  linux-py3.10-production.txt  linux-py3.11-development.txt  linux-py3.11-production.txt  linux-py3.12-development.txt  linux-py3.12-production.txt  linux-py3.13-development.txt  linux-py3.13-production.txt  linux-py3.5-development.txt  linux-py3.5-production.txt  linux-py3.8-development.txt  linux-py3.8-production.txt  linux-py3.9-development.txt  linux-py3.9-production.txt  production.in  production.txt  test.txt
extra/topicicons/: list  topic-hidden-reported.xcf  topic-hidden.xcf  topic-locked-hidden-reported.xcf  topic-locked-hidden.xcf  topic-locked-reported.xcf  topic-locked.xcf  topic-new-locked-hidden-reported.xcf  topic-new-locked-reported.xcf  topic-new-solved-locked-hidden.xcf  topic-new-solved-reported.xcf  topic-new-solved.xcf  topic-reported.xcf  topic-solved-hidden.xcf  topic-solved-locked-hidden.xcf  topic-solved-reported.xcf
features/: environment.py  login.feature  password_forgotten.feature
inyoka/: __init__.py  celery.py  celery_app.py  default_settings.py  hosts.py  media_urls.py  static_urls.py  tasks.py  testing.py  wsgi.py
inyoka/core/: models.py  signals.py
inyoka/forum/: __init__.py  acl.py  apps.py  constants.py  forms.py  legacyurls.py  macros.py  models.py  notifications.py  search.py  search_indexes.py  services.py  signals.py  urls.py  utils.py  views.py
inyoka/ikhaya/: __init__.py  apps.py  forms.py  legacyurls.py  macros.py  models.py  notifications.py  search.py  search_indexes.py  services.py  urls.py  views.py
inyoka/locale/: babel_django_templates.py  django.pot  djangojs.pot
inyoka/markup/: __init__.py  apps.py  base.py  constants.py  lexer.py  machine.py  macros.py  models.py  nodes.py  parsers.py  parsertools.py  signals.py  templates.py  transformers.py  utils.py
inyoka/middlewares/: __init__.py  auth.py  common.py  highlighter.py  security.py  services.py  session.py  tz.py
inyoka/news/: __init__.py  forms.py  models.py  notifications.py  services.py  urls.py  views.py
inyoka/parser/: __init__.py  constants.py  lexer.py  machine.py  macros.py  nodes.py  parsers.py  parsertools.py  templates.py  transformers.py  utils.py
inyoka/pastebin/: apps.py  forms.py  models.py  urls.py  views.py
inyoka/planet/: __init__.py  apps.py  forms.py  models.py  search.py  tasks.py  urls.py  views.py
inyoka/portal/: __init__.py  apps.py  auth.py  auth_pipeline.py  filters.py  forms.py  legacyurls.py  models.py  services.py  social_auth.py  tasks.py  urls.py  user.py  utils.py  views.py
inyoka/privmsg/: __init__.py  apps.py  forms.py  models.py  notifications.py  tasks.py  todo.md  urls.py  views.py
inyoka/scripts/: __init__.py  check_celeryd_activity.py  clean_temp_dirs.py  clean_users.py  cleanup_sessions.py  clear_thumbnail_cache.py  generate_snapshot.py  generate_static_wiki.py  highlight_css.py  jabber_bot.py  planet_sync.py  render_posts.py  search_update.py  user_record.py  wiki_excerpt.py
inyoka/static/: feeds_update.xml  robots.txt  server_error.html
inyoka/templates/: 500.html  appheader.html  confirm_action.html  confirm_action_flash.html  macros.html  overall.html  overall.m.html  pagination.html
inyoka/utils/: __init__.py  antispam.py  cache.py  captcha.py  celery_support.py  css.py  database.py  dates.py  decorators.py  diff3.py  django_19_auth_mixins.py  feeds.py  files.py  flash_confirmation.py  flashing.py  forms.py  generic.py  gravatar.py  highlight.py  html.py  http.py  imaging.py  jabber.py  legacyurls.py  local.py  logger.py  magic.py  mail.py  notification.py  pagination.py  parsertools.py  pylibmc.py  search.py  services.py  sessions.py  signals.py  sortable.py  spam.py  special_day.py  storage.py  (+8 more)
inyoka/wiki/: __init__.py  acl.py  actions.py  apps.py  exceptions.py  forms.py  macros.py  models.py  notifications.py  parsers.py  search.py  search_indexes.py  services.py  signals.py  storage.py  tasks.py  templates.py  urls.py  utils.py  views.py
jinja2/: README.rst  appheader.html  confirm_action.html  confirm_action_flash.html  macros.html  overall.html  package.json
jinja2/errors/: 400.html  403.html  403_csrf.html  404.html  500.html
jinja2/forum/: movetopic.html  post_delete.html  topiclist.html
jinja2/ikhaya/: detail.html  events.html  reportlist.html
jinja2/mails/: account_deactivate.txt  account_rename.txt  activation_mail.txt  new_comment.txt  new_email_confirmation.txt  new_pm.txt  new_post.txt  new_reported_topic.txt  new_suggestion.txt  new_topic.txt  new_user_password.txt  page_edited.txt  planet_suggest.txt  reset_email.txt  (+3 more)
tests/: runtests.sh  test_mysql.py  test_postgresql.py  test_sqlite.py
tmp/: sticky
(+1486 files in other folders)
